# arcwell

./: .gitignore  AGENTS.md  Cargo.toml  README.md  STATUS.md  TODO.md  TODO_DAG.md
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/arcwell-cli/: Cargo.toml
crates/arcwell-cli/src/: channels_work_cli.rs  cli_dispatch.rs  commands.rs  commerce_job_radar_cli.rs  guard_cli.rs  import_claude.rs  knowledge_research_cli.rs  main.rs  proof_cli.rs  service_memory_cli.rs  tests.rs  x_cli.rs
crates/arcwell-cli/src/mcp/: registry.rs  schemas.rs  tool_dispatch.rs
crates/arcwell-cli/src/server/: ops_ui_render.rs
crates/arcwell-cli/src/tests/: http_ops_ui.rs  mcp_research_commerce_job.rs  mcp_sources_x.rs  mcp_tool_parity.rs
crates/arcwell-core/: Cargo.toml
crates/arcwell-core/src/: channel_project_memory.rs  common.rs  db_schema.rs  health_checks.rs  health_validation.rs  input_validation.rs  job_normalization.rs  knowledge.rs  lib.rs  policy_digest.rs  radar_digest.rs  research_reports_search.rs  store.rs  tests.rs  types.rs
crates/arcwell-core/src/commerce_research/: commerce_inputs_reports.rs  model_providers.rs  research_audit.rs  research_documents.rs  source_claims.rs
crates/arcwell-core/src/db_schema/: commerce_job_rows.rs  proof_schema.rs  radar_commerce_job_schema.rs  x_canonical_helpers.rs  x_rows_schema.rs
crates/arcwell-core/src/store/: backup_wiki_sources_store.rs  base.rs  channel_delivery.rs  cursors_edge.rs  digest_schedule_store.rs  governance.rs  health_worker.rs  job_refresh_ops_store.rs  job_roles_reports_store.rs  knowledge_cluster_editorial.rs  knowledge_projection_store.rs  memory.rs  project_controller.rs  proof_packets.rs  queue.rs  radar.rs  research_convergence_flow_store.rs  research_documents_editorial_store.rs  research_run_store.rs  wiki_decision_ledger_store.rs  work_procedure_store.rs  worker_digest_delivery.rs  worker_jobs_basic.rs  worker_provider_fetch.rs  x_auth_search.rs  x_import_archive.rs  x_maintenance.rs  x_profile_enrichment.rs  x_watch_curation.rs  x_watch_monitor.rs
crates/arcwell-core/src/tests/: concurrency_guards.rs  job.rs  policy_validation.rs  proof.rs  schema_memory_policy.rs  secret_redaction.rs  x_pipeline.rs
(+304 files in other folders)
