[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

