[package]
name = "arcwell-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
